--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "jest --watchAll --verbose"
   },
   "author": "Abegunde Precious Olanrewaju",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jest": "^29.6.1",
+    "supertest": "^6.3.3"
   }
 }
