--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "Abegunde Precious Olanrewaju",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jest": "^29.6.1",
+    "readline": "^1.3.0",
     "supertest": "^6.3.3"
   }
 }
