--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js",
-    "test": "jest --watchAll --verbose"
+    "test": "jest --watchAll --verbose",
+    "cli": "node book-cli.js"
   },
   "author": "Abegunde Precious Olanrewaju",
   "license": "ISC",
